# CawOS

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  build.bat  start.bat
.github/workflows/: discord.yml  lagom-template.yml  manpages.yml  serenity-template.yml  wasm.yml
Base/etc/: SystemServer.ini
Base/res/apps/: ProgressBar95.af
Base/res/html/misc/: welcome.html
Base/res/music/myplaylist/: readme.txt
Base/res/themes/: Default.ini
Base/res/video/: itvideo.webm
Userland/Applications/About/: main.cpp
Userland/Games/: CMakeLists.txt
Userland/Games/ProgressBar95/: CMakeLists.txt  GameWidget.cpp  GameWidget.h  Segment.h  main.cpp
Userland/Libraries/LibCore/: Version.cpp
Userland/Libraries/LibGUI/: AboutDialog.cpp  AboutDialog.gml
Userland/Services/Taskbar/: ShutdownDialog.cpp  TaskbarWindow.cpp  main.cpp
Userland/Utilities/: CMakeLists.txt  panic.cpp  playsound.cpp
include/: ata.h  commands.h  font.h  frames_data.h  fs.h  gui.h  idt.h  io.h  keyboard_map.h  kgui.h  screen.h  util.h  vga.h
scripts/: linker.ld  pack_fs.py
src/boot/: boot.asm  gdt.asm  kernel_entry.asm  switch_to_pm.asm
src/cmd/: beep.c  cat.c  help.c  info.c  ls.c  reboot.c  rm.c  touch.c  write.c
src/cpu/: idt.c  interrupt.asm
src/drivers/: ata.c  commands.c  gui.c  io.c  screen.c  vga.c
src/fs/: fs.c
src/kernel/: kernel.c  kgui.c
src/libc/: badapple.c  font.c  util.c
